fix: add necessary files to git ignore to list.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# CouchDB data files
+couchdb/
+*.couch
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
