--- a/.env.example
+++ b/.env.example
@@ -3,26 +3,35 @@
 # Database Implementation
 # Set to "true" to use PouchDB (with sync capabilities)
 # Set to "false" to use Dexie (local-only IndexedDB)
-# Default: false (Dexie)
-VITE_USE_POUCHDB=false
+# Default: true (PouchDB with sync enabled for Phase 4)
+VITE_USE_POUCHDB=true
 
 # PouchDB Configuration (only used when VITE_USE_POUCHDB=true)
 # Local database name
 VITE_POUCHDB_LOCAL_NAME=fintrac
 
-# Remote CouchDB URL for sync (optional)
-# VITE_POUCHDB_REMOTE_URL=http://localhost:5984/fintrac
+# Remote CouchDB URL for sync
+VITE_COUCHDB_URL=http://localhost:5984/fintrac
 
-# CouchDB Authentication (optional)
-# VITE_COUCHDB_USERNAME=admin
-# VITE_COUCHDB_PASSWORD=password
+# CouchDB Authentication
+VITE_COUCHDB_USERNAME=admin
+VITE_COUCHDB_PASSWORD=password
 
 # Sync Configuration
 # Enable continuous sync (true/false)
-VITE_POUCHDB_SYNC_LIVE=true
+VITE_SYNC_LIVE=true
 
 # Enable retry on sync failure (true/false)
-VITE_POUCHDB_SYNC_RETRY=true
+VITE_SYNC_RETRY=true
+
+# Sync heartbeat interval in milliseconds
+VITE_SYNC_HEARTBEAT=10000
+
+# Sync timeout in milliseconds
+VITE_SYNC_TIMEOUT=20000
+
+# Auto-start sync on app load
+VITE_SYNC_AUTO_START=true
 
 # Application Configuration
 # App name for database identification
