--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "dexie": "^4.2.0",
-    "pouchdb": "^9.0.0",
+    "js-md5": "^0.8.3",
+    "pouchdb": "^8.0.1",
     "pouchdb-find": "^9.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -28,9 +29,11 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.5.2",
     "@types/pouchdb": "^6.4.2",
+    "@types/pouchdb-browser": "^6.1.5",
     "@types/pouchdb-find": "^7.3.3",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/spark-md5": "^3.0.5",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
