--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,13 @@
 # Development Environment Configuration for FinTrac
 # This file contains environment variables for local development
 
-# Database Configuration - Use Dexie for reliable local-first operation
+# Database Configuration - Use PouchDB with CouchDB sync
 VITE_USE_POUCHDB=false
 
-# CouchDB Configuration (for testing sync via REST API)
-VITE_COUCHDB_URL=http://localhost:5984/fintrac
+# CouchDB Configuration (for network access)
+VITE_SYNC_ENABLED=true
+VITE_COUCHDB_URL=http://10.196.88.186:5984
+VITE_COUCHDB_DATABASE=fintrac-test
 VITE_COUCHDB_USERNAME=admin
 VITE_COUCHDB_PASSWORD=password
 
@@ -15,9 +17,16 @@ VITE_APP_VERSION=1.0.0-dev
 VITE_APP_ENVIRONMENT=development
 
 # Feature Flags
-VITE_ENABLE_SYNC=false
+VITE_ENABLE_SYNC=true
 VITE_ENABLE_OFFLINE_MODE=true
 VITE_ENABLE_DEBUG_LOGS=true
+
+# Sync Configuration
+VITE_SYNC_BIDIRECTIONAL=true
+VITE_SYNC_INTERVAL=30000
+VITE_SYNC_BATCH_SIZE=50
+VITE_SYNC_CONFLICT_RESOLUTION=remote-wins
+VITE_SYNC_AUTO_START=false
 
 # Development Settings
 VITE_HOT_RELOAD=true
@@ -36,16 +45,4 @@ VITE_MAX_TRANSACTIONS_PER_SYNC=100
 VITE_LOG_LEVEL=debug
 VITE_ENABLE_PERFORMANCE_MONITORING=true
 
-# Enable sync functionality
-VITE_SYNC_ENABLED=true
-
-# CouchDB configuration
-VITE_COUCHDB_URL=http://localhost:5984
-VITE_COUCHDB_DATABASE=fintrac-test
-VITE_COUCHDB_USERNAME=admin
-VITE_COUCHDB_PASSWORD=password
-
-# Sync settings
-VITE_SYNC_INTERVAL=10000
-VITE_SYNC_BATCH_SIZE=10
-VITE_SYNC_AUTO_START=false
+# Duplicate configuration removed - using values from top of file
