--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,24 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+
+# TypeScript
+*.tsbuildinfo
+
+# Test coverage
+coverage
+
 # CouchDB data files
 couchdb/
 *.couch
+
+# Deployment
+.vercel/
 
 # Editor directories and files
 .vscode/*
